test/tests/errors/error-array-access-with-non-int.sm
// true
// false
/**/
/**/

program {
    array x[0:4];
    x["a"] = 1;
}